# packages/uxbert/gamification/src/Models/LeaderBoard.php
@@ -10,24 +10,16 @@ class LeaderBoard extends Model
     protected $collection = 'leaderboards';
 
     protected $fillable = [
-        'name', 'description', 'key', 'date_from', 'date_to', 'client_id', 'terms',
-        'rewards'
-        // = [
-        //     {
-        //         'rank' => 1,
-        //         'user_id' => 1
-        //         'reward_id' => 1
-        //     },
-        //     {
-        //         'rank' => 2,
-        //         'user_id' => 3323
-        //         'reward_id' => 34535
-        //     },
-        // ]
+        'name', 'description', 'key', 'date_from', 'date_to', 'client_id', 'terms', 'rewards'
     ];
 
     public function client()
     {
         return $this->belongsTo(Client::class, 'client_id', '_id');
+    }
+
+    public function records()
+    {
+        return $this->hasMany(LeaderBoardRecord::class, 'leaderboard_id', '_id');
     }
 }
